<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Strings used in app ui-->
    <string name="app_name">AutoSMSTweets</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Hello </string>
    <string name="login_instructions">Please login to twitter</string>
    <string name="share_instructions">Enter share message</string>
    <string name="btn_login">Login to Twitter</string>
    <string name="btn_share">Share</string>

    <!-- Twitter Configurations -->
    <string name="twitter_callback">http://javatechig.android.app</string>
    <string name="twitter_consumer_key">9CU8t9x6j3VrfTCpCklhHvRUT</string>
    <string name="twitter_consumer_secret">I4VuCkJXv6rD1K4xKdsPvrJ9w0j7HlKOoWHa4lAbittl2yZO6M</string>
    <string name="twitter_oauth_verifier">oauth_verifier</string>
    <string name="logoutButton">logoutButton</string>
    <!-- End Configurations -->
</resources>